...
      'Clear Cache': 'Limpar Cache',
      Image: 'Imagem',
      Read: 'Ler',
      'Sign in': 'Logar',
      Chapter: 'Capítulo',
      Connect: 'Conectar',
      Settings: 'Configurações',
      'Horizontal deform': 'Deformação horizontal',
      'Vertical deform': 'Deformação vertical',
      'Upscale next chapter': 'Melhorar próximo capítulo',
      'Sync Up': 'Gerar código',
      'Sync In': 'Usar código',
      'Sync Up description': 'Gere um código para conectar este dispositivo e sincronizar seu histórico de leitura em outros aparelhos.',
...
